<?xml version="1.0"?>
<package format="3">
  <name>path_manager</name>
  <version>0.0.1</version>
  <description>Path management package for planning and optimizing trajectories</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>path_optimizer</depend>
  <depend>path_planner</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>