<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.1</version>
  <description>A standalone package for A* path planning and grid map utilities</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>