<?xml version="1.0"?>
<package format="3">
  <name>path_visualization</name>
  <version>0.0.1</version>
  <description>Path visualization package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>Eigen3</depend>
  <depend>px4_msgs</depend>
  <depend>path_optimizer</depend>
  <depend>path_planner</depend>  <!-- path_planner 추가 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>