<?xml version="1.0"?>
<package format="3">
  <name>rover_control</name>
  <version>0.0.1</version>
  <description>
    Control and navigation for a rover using PX4 and ROS2.
  </description>

  <maintainer email="your.email@domain.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
